<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/MainnameColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="153dp"
        android:background="@drawable/viewallusers_round_btn"
        android:onClick="showusers"
        android:text="@string/view_users_btn"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="600dp"
        android:layout_marginBottom="60dp"
        android:drawableStart="@drawable/goback_clipart"
        android:onClick="Previous"
        android:text="Previous"
        android:textColor="#000000"
        android:visibility="invisible"
        android:background="@drawable/back_btn_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/home_btn_bg"
        android:drawableStart="@drawable/home_btn"
        android:text="HOME"
        android:onClick="Home"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/listView" />


    <TextView
        android:id="@+id/task_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_info"
        android:textColor="#666565"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.938" />


    <ListView
        android:id="@+id/listView"
        android:layout_width="300dp"
        android:layout_height="527dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="77dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="400dp"
        android:layout_marginBottom="950dp"
        android:background="@android:color/background_light"
        android:hint="@string/edit_text1_hint"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible"
        tools:ignore="Autofill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.346" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="400dp"
        android:layout_marginBottom="900dp"
        android:background="@android:color/background_light"
        android:hint="@string/edit_text2_hint"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:visibility="invisible"
        tools:ignore="Autofill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_dark"
        android:onClick="transfer"
        android:text="@string/transfer_btn"
        android:textColor="@android:color/background_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />


    <TextView
        android:id="@+id/editText3"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="300dp"
        android:layout_height="148dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="13dp"
        android:singleLine="false"
        android:textColor="#000000"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</android.support.constraint.ConstraintLayout>